--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!-- Example image URL -->
- <h1>It's My Birthday!!!</h1>
- <h2>On The 27th March</h2>
- <img src="//raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"/>
- <h3>What to bring:</h3>
- <ul>
-    <li>money</li>
-    <li>gift</li>
-    <li>floos</li>
- </ul>
+<!-- TODO 1: Create the HTML Boilerplate -->
 
-<!-- Example Google Maps Link -->
-<a href="//www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">My House</a>
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
